# Travelling_Essentials

./: AutumnBag.cpp  AutumnBag.h  Bag.cpp  Bag.h  CMakeLists.txt  Makefile  README.md  SpringBag.cpp  SpringBag.h  SummerBag.cpp  SummerBag.h  WinterBag.cpp  WinterBag.h  input_clothes.txt  input_food.txt  input_gear.txt  main.cpp
